增加了读取文件的功能

--- a/ConsApp01/ConsApp01.vcxproj
+++ b/ConsApp01/ConsApp01.vcxproj
@@ -132,6 +132,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classdefault.h" />
+    <ClInclude Include="FileRead.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
