--- a/ConsApp01/ConsApp01.vcxproj.filters
+++ b/ConsApp01/ConsApp01.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Classdefault.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="FileRead.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
